# little-agent

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  cspell.json
crates/actor/: Cargo.toml
crates/actor/src/: error.rs  handle.rs  lib.rs  macros.rs  mailbox.rs  scheduler.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  conversation.rs  lib.rs  model_client.rs  tool.rs
crates/core/src/agent/: builder.rs  state.rs  tests.rs
crates/core/src/tool/: approval.rs  error.rs  executor.rs  manager.rs  object.rs
crates/little-agent/: Cargo.toml
crates/little-agent/src/: ffi.rs  lib.rs  main.rs  session.rs  system_prompt.md
crates/little-agent/src/tools/: glob.rs  mod.rs  read_file.rs  shell.rs
crates/model/: Cargo.toml
crates/model/src/: error.rs  lib.rs  opaque.rs  provider.rs  request.rs  response.rs
crates/model/tests/: simple_fake_model.rs
crates/openai-model/: Cargo.toml
crates/openai-model/fixtures/: test_response.txt
crates/openai-model/src/: config.rs  lib.rs  proto.rs  response.rs
crates/openai-model/src/io/: chunks.rs  mod.rs  sse.rs
crates/test-model/: Cargo.toml
crates/test-model/src/: lib.rs  preset.rs
include/: little-agent.h
