[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = "1.49.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
little-agent-model = { path = "crates/model" }
little-agent-test-model = { path = "crates/test-model" }
little-agent-actor = { path = "crates/actor" }
little-agent-core = { path = "crates/core" }
