[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"
rust-version = "1.87.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 4

[workspace.dependencies]
async-trait = "0.1"
serde = "1.0.228"
serde_json = "1.0.149"
schemars = "1.2.1"
mime = "0.3.17"
pin-project-lite = "0.2.16"
bytes = "1.11.0"
backoff = "0.4.0"
tokio = "1.49.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
reqwest = "0.13.1"
little-agent-model = { path = "crates/model" }
little-agent-test-model = { path = "crates/test-model" }
little-agent-openai-model = { path = "crates/openai-model" }
little-agent-actor = { path = "crates/actor" }
little-agent-core = { path = "crates/core" }
