[package]
name = "little-agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
little-agent-model = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
little-agent-test-model = { workspace = true }
