[package]
name = "little-agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
little-agent-model = { workspace = true }
little-agent-actor = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
little-agent-test-model = { workspace = true }
